force-app/main/default/objects/EMS_EM_Dependents__c/EMS_EM_Dependents__c.object-meta.xml
<CustomObject>
    <label>Dependents</label>
    <nameField>
        <label>Dependents Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dependents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>