force-app/main/default/objects/EMS_EM_Dependents__c/fields/EMS_EM_Contact__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Dependents</relationshipLabel>
    <relationshipName>Dependents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>