force-app/main/default/objects/EMS_EM_Dependents__c/fields/EMS_EM_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_Date_of_Birth__c</fullName>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>