force-app/main/default/objects/EMS_EM_Dependents__c/fields/EMS_EM_Relationship_to_Nominee__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_Relationship_to_Nominee__c</fullName>
    <label>Relationship to Beneficiary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>