force-app/main/default/objects/EMS_EM_Dependents__c/fields/visiable_to_edit__c.field-meta.xml
<CustomField>
    <fullName>visiable_to_edit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Value to check edit button</description>
    <label>visiable to edit</label>
    <type>Checkbox</type>
</CustomField>