force-app/main/default/objects/EMS_EM_Dependents__c/validationRules/EMS_EM_DependentNameValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>EMS_EM_DependentNameValidation</fullName>
    <active>false</active>
    <description>Name should allow only alphabets</description>
    <errorConditionFormula>NOT(REGEX(Name,&quot;^[a-z  A-Z]*$&quot;))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Please enter a valid name for Dependent</errorMessage>
</ValidationRule>